now lets commit to deploy branch

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,3 +19,12 @@ jobs:
           node-version: "12.x"
       - run: npm install
       - run: npm run production
+
+      - name: Commit assets
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git checkout -B deploy
+          git add -f public/
+          git commit -m "Build front-end assets"
+          git push -f origin deploy
