--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,25 +9,25 @@ jobs:
     name: Build Js/Css
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      #   with:
-      #     token: ${{ secrets.PUSH_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
 
-      # - name: Set up Node
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: "12.x"
-      # - run: npm install
-      # - run: npm run production
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - run: npm install
+      - run: npm run production
 
-      # - name: Commit assets
-      #   run: |
-      #     git config --local user.email "action@github.com"
-      #     git config --local user.name "GitHub Action"
-      #     git checkout -B deploy
-      #     git add -f public/
-      #     git commit -m "Build front-end assets"
-      #     git push -f origin deploy
+      - name: Commit assets
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git checkout -B deploy
+          git add -f public/
+          git commit -m "Build front-end assets"
+          git push -f origin deploy
 
       - name: Deploy to production server
         uses: appleboy/ssh-action@master
@@ -35,4 +35,4 @@ jobs:
           username: root
           host: '104.248.123.108'
           key: ${{ secrets.SSH_PASSWORD }}
-          script: 'cd /var/www/githubactions && sh server_deploy.sh'
+          script: 'cd /var/www/githubactions-beercode && sh server_deploy.sh'
