--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,3 +36,16 @@ jobs:
           host: '104.248.123.108'
           key: ${{ secrets.SSH_PASSWORD }}
           script: 'cd /var/www/githubactions-beercode && sh server_deploy.sh'
+
+  remove-branch:
+    name: remove deploy branch
+    runs-on: ubuntu-latest
+    needs: [build-js]
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
+
+      - name: Reset
+        run: git push origin --delete deploy
